--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     background-color: #007bff;
     color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 50px;
     cursor: pointer;
     transition: background-color 0.2s;
 }
@@ -45,6 +45,7 @@ body {
     width: 100%;
     max-width: 500px;
 }
+
 
 .item-tarefa {
     background-color: white;
@@ -89,4 +90,30 @@ body {
 
 .btn-editar:hover {
     background-color: #e0a800;
+}
+
+
+.hidden {
+ /* significa que o elemento não será exibido na tela*/
+  display: none !important; 
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-conteudo {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  min-width: 300px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
